# yap_graduate_work

./: .env_example  .flake8  .gitignore  README.md  content.uml  docker-compose.yaml  init_data.sql  readme.md
adminpanel/: .dockerignore  .env.example  .env_example  .flake8  Dockerfile  docker-compose.yaml  gunicorn.conf.py  pyproject.toml
adminpanel/panel/: settings.py  urls.py
adminpanel/promo/: admin.py  apps.py  forms.py  models.py  signals.py
adminpanel/promo/locale/: ru.txt
adminpanel/promo/locale/en/LC_MESSAGES/: django.po
adminpanel/promo/locale/ru/LC_MESSAGES/: django.po
adminpanel/promo/migrations/: 0001_initial.py  0002_alter_history_options_alter_product_options_and_more.py  0003_alter_history_applied_user_id_and_more.py  0004_alter_product_name.py  0005_product_description_product_price.py  0006_alter_promocode_title.py  0007_bulkpromocreate.py  0008_bulkpromocreate_created_by.py  0009_bulkpromocreate_description_and_more.py  0010_alter_bulkpromocreate_options_alter_history_options_and_more.py
code_generator/: Dockerfile  docker-compose.yaml  pyproject.toml  readme.md  requirements.txt
code_generator/src/: main_flask.py  main_gui.py  model.py
code_generator/src/config/: config.py  logger.py
code_generator/src/core/: code_create.py  django_reader.py  interface_gui.py  main_script.py  str_generator.py
code_generator/src/download/: 2023-03-14 10:02.csv
docs/: openapi.json  openapi.yaml
fastapi/: Dockerfile  README.md  docker-compose.yml  requirements.txt
fastapi/src/: config.py  exceptions.py  main.py  models.py  promo_service.py
fastapi/src/db/: connection.py  entities.py
fastapi/src/tools/: text_constants.py
frontend/: .env.example  .env.production  Dockerfile  docker-compose.yml  package-lock.json  package.json
frontend/nginx/conf.d/: site.conf
frontend/src/components/: checkoutLayout.jsx  layout.jsx  promosList.jsx  techInfo.jsx
frontend/src/mocks/: index.ts  openapi.json  promos.js  promos.json  readme.md
nginx/conf.d/: site.conf
(+11 files in other folders)
