[tool.poetry]
name = "yap-graduate-work"
version = "0.1.0"
description = ""
authors = ["mishastik78 <69627188+mishastik78@users.noreply.github.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
