[tool.poetry]
name = "test-"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "code_generator"}]

[tool.poetry.dependencies]
python = "^3.10"
psycopg2-binary = "2.9.5"
pydantic = "^1.10.5"
pyqt6 = "^6.4.2"
flask = "^2.2.3"
celery = "^5.2.7"
python-logstash = "0.4.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
